# pilot-sync-nexus

./: .env  BUILD-TRIGGER.md  DEPLOYMENT-READY.md  INSTALL-MAC.md  README.md  REFACTORING-SUMMARY.md  SIMPLE-INSTALL.md  capacitor.config.ts  cleanup.js  complete-design-system.css  create-valid-icons.js  electron-builder.json  fix-tauri-icons.js  index.html  install-mac.sh  install.sh  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-dmg.yml  build-mac.yml  bypass-icon-generation.yml  capacitor-build.yml  capacitor-ci.yml  code-quality-check.yml  code-quality.yml  code-validation.yml  deploy.yml  simple-icon-test.yml  test-icons-only.yml
design-system/: README.md  animations.css  base-styles.css  components-styles.css  design-tokens.css  mobile-cards.css  mobile-responsive.css  tablet-fix.css  utility-classes.css
public/: electron.js
scripts/: cleanup-tauri.js  fix-project.js  health-check.js  validate-project.js
src/: App.tsx  capacitor.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AdvancedDashboard.tsx  AppSidebar.tsx  ContactButtons.tsx  CreateProjectDialog.tsx  CreateProjectModal.tsx  EnhancedDashboard.tsx  ErrorBoundary.tsx  FolderManagerExample.tsx  Navbar.tsx  PriorityDropdown.tsx  ProjectCard.tsx  ProjectEditModal.tsx  ProjectManagementApp.tsx  ProjectPulseDashboard.tsx  ProjectTasksModal.tsx  ProjectsList.tsx  ProjectsSidebar.tsx  ProtectedRoute.tsx  QuickTasksSidebar.tsx  SecurityIndicator.tsx  (+3 more)
supabase/: config.toml
(+81 files in other folders)
