[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
dirs = "5.0"
tauri-plugin-shell = "1.0"
tauri-plugin-dialog = "1.0"
tauri-plugin-fs = "1.0"
tauri-plugin-opener = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]